# pdf-downloader-mcp

./: .gitignore  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  install.bat  install.sh  pyproject.toml
.github/workflows/: ci.yml
examples/: usage_examples.py
src/pdf_downloader_mcp/: __init__.py  __main__.py  downloader.py  exceptions.py  server.py  utils.py  validators.py
tests/: test_integration.py
